[gd_scene load_steps=12 format=3 uid="uid://dk3v0w7q51euy"]

[ext_resource type="FontFile" uid="uid://dhwn4eqh0rbri" path="res://Assets/Fonts/KARNIVOB.ttf" id="1_6ftam"]
[ext_resource type="Script" path="res://Assets/Scripts/Menus/MainMenuManager.gd" id="1_gjhug"]
[ext_resource type="FontFile" uid="uid://c0dik78i01yl8" path="res://Assets/Fonts/KARNIBLA.ttf" id="2_7aed5"]
[ext_resource type="Texture2D" uid="uid://vvq3nfcryfj8" path="res://Assets/Sprites/BGNs/tetrio-coverart-alt.png" id="3_vkfwq"]
[ext_resource type="PackedScene" uid="uid://cgvn5pc7hub41" path="res://Assets/Scenes/Options/ChangeControls.tscn" id="5_7cfgb"]
[ext_resource type="FontFile" uid="uid://nja5ecqggsmn" path="res://Assets/Fonts/Spectrashell.otf" id="6_kb5ii"]

[sub_resource type="LabelSettings" id="LabelSettings_xlm8c"]
font = ExtResource("1_6ftam")
font_size = 88

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_64jme"]
bg_color = Color(0.133333, 0.180392, 0.290196, 1)

[sub_resource type="Theme" id="Theme_bqhtg"]
Button/font_sizes/font_size = 50
Button/fonts/font = ExtResource("2_7aed5")
Button/styles/normal = SubResource("StyleBoxFlat_64jme")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r4qgp"]
bg_color = Color(0.243137, 0.160784, 0.211765, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jgqs7"]
bg_color = Color(0.133333, 0.290196, 0.196078, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("1_gjhug")

[node name="BGN" type="TextureRect" parent="."]
z_index = -100
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_vkfwq")
expand_mode = 2
stretch_mode = 6
flip_h = true

[node name="MainMenu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="MainMenu"]
layout_mode = 1
offset_left = 50.0
offset_top = 100.0
offset_right = 884.0
offset_bottom = 217.0
text = "Tetra Desktop"
label_settings = SubResource("LabelSettings_xlm8c")

[node name="PlayButton" type="Button" parent="MainMenu"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -514.0
offset_top = -197.0
offset_right = -5.0
offset_bottom = -28.0
grow_horizontal = 0
grow_vertical = 2
theme = SubResource("Theme_bqhtg")
theme_override_styles/normal = SubResource("StyleBoxFlat_r4qgp")
text = "Play"

[node name="OptionsButton" type="Button" parent="MainMenu"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -726.0
offset_top = 15.0
offset_right = -5.0
offset_bottom = 184.0
grow_horizontal = 0
grow_vertical = 2
theme = SubResource("Theme_bqhtg")
text = "Options"

[node name="CreditsButton" type="Button" parent="MainMenu"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -929.0
offset_top = 235.0
offset_right = -5.0
offset_bottom = 404.0
grow_horizontal = 0
grow_vertical = 2
theme = SubResource("Theme_bqhtg")
theme_override_styles/normal = SubResource("StyleBoxFlat_jgqs7")
disabled = true
text = "Credits"

[node name="PlayMenu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PlayMenu"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_right = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1

[node name="VS-Button" type="Button" parent="PlayMenu/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_bqhtg")
theme_override_styles/normal = SubResource("StyleBoxFlat_r4qgp")
text = "VS Battle"

[node name="Control" type="Control" parent="PlayMenu/VBoxContainer"]
layout_mode = 2

[node name="SprintButton" type="Button" parent="PlayMenu/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_bqhtg")
theme_override_styles/normal = SubResource("StyleBoxFlat_r4qgp")
text = "40-Lines"

[node name="ClassicButton" type="Button" parent="PlayMenu/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_bqhtg")
theme_override_styles/normal = SubResource("StyleBoxFlat_r4qgp")
text = "Classic"

[node name="BlitzButton" type="Button" parent="PlayMenu/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_bqhtg")
theme_override_styles/normal = SubResource("StyleBoxFlat_r4qgp")
disabled = true
text = "Blitz"

[node name="EndlessButton" type="Button" parent="PlayMenu/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_bqhtg")
theme_override_styles/normal = SubResource("StyleBoxFlat_r4qgp")
disabled = true
text = "Endless (ZEN)"

[node name="BackButton" type="Button" parent="PlayMenu/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_bqhtg")
text = "Back"

[node name="OptionsMenu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsMenu"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_right = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1

[node name="ControlsButton" type="Button" parent="OptionsMenu/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_bqhtg")
theme_override_styles/normal = SubResource("StyleBoxFlat_r4qgp")
text = "Controls"

[node name="SoundButton" type="Button" parent="OptionsMenu/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_bqhtg")
theme_override_styles/normal = SubResource("StyleBoxFlat_r4qgp")
disabled = true
text = "Audio"

[node name="MiscButton" type="Button" parent="OptionsMenu/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_bqhtg")
theme_override_styles/normal = SubResource("StyleBoxFlat_r4qgp")
disabled = true
text = "Misc"

[node name="CustomizationButton" type="Button" parent="OptionsMenu/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_bqhtg")
theme_override_styles/normal = SubResource("StyleBoxFlat_r4qgp")
disabled = true
text = "Customization"

[node name="BackButton" type="Button" parent="OptionsMenu/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_bqhtg")
text = "Back"

[node name="ChangeControls" parent="." instance=ExtResource("5_7cfgb")]
visible = false
layout_mode = 1

[node name="Version" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -49.0
offset_right = 307.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("6_kb5ii")
theme_override_font_sizes/font_size = 30
text = "v0.0.3"
vertical_alignment = 2

[node name="Disclaimer" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -307.0
offset_top = -49.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("6_kb5ii")
theme_override_font_sizes/font_size = 30
text = "ALL ASSETS ARE PLACEHOLDERS.
THEY WILL BE CHANGED IN THE FUTURE"
horizontal_alignment = 2
vertical_alignment = 2

[connection signal="pressed" from="MainMenu/PlayButton" to="." method="ActivatePlayMenu"]
[connection signal="pressed" from="MainMenu/OptionsButton" to="." method="ActivateOptionsMenu"]
[connection signal="pressed" from="PlayMenu/VBoxContainer/VS-Button" to="." method="GoToVS"]
[connection signal="pressed" from="PlayMenu/VBoxContainer/SprintButton" to="." method="GoTo40Lines"]
[connection signal="pressed" from="PlayMenu/VBoxContainer/ClassicButton" to="." method="GoToClassic"]
[connection signal="pressed" from="PlayMenu/VBoxContainer/BackButton" to="." method="BackPlay"]
[connection signal="pressed" from="OptionsMenu/VBoxContainer/BackButton" to="." method="BackOptions"]
